--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Navigation from '../components/Navigation.astro';
-import Navbar from '../components/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
+import DetailScreen from '../components/DetailScreen.astro'
 ---
 
 <Layout>
-	<Navbar />
+	<DetailScreen />
+	
 </Layout>
