Actualizacion de la DetailScreen

--- a/src/components/DetailScreen.astro
+++ b/src/components/DetailScreen.astro
@@ -1,8 +1,44 @@
 <div class="bg-slate-600 h-screen" slot="detailScreen">
-    <div class="flex h-4/6 min-w-screen bg-black">
-
+    <div class="relative h-4/6 min-w-screen bg-black">
+        <div class="text-white bottom-10 absolute ml-28">
+            <h3 class="text-lime-400 uppercase">ariadne</h3>
+            <div class="my-5">
+                <p>Ariadne</p>
+                <p>Dirigida por: Adrian Rodriguez</p>
+                <p>Genero(s): Drama, Romance</p>
+                <p>Año: 2017 | Pais: Estados Unidos</p>
+            </div>
+            <button
+                class="flex items-center justify-center gap-2 px-4 py-2 bg-lime-400 text-black font-bold rounded-lg shadow-black shadow-inner hover:bg-lime-600 hover:text-white transition"
+            >
+                <span>
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24"
+                        fill="currentColor"
+                        width="14"
+                        height="14"
+                    >
+                        <path
+                            d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z"
+                        ></path>
+                    </svg>
+                </span>
+                <span>Ver ahora</span>
+            </button>
+        </div>
     </div>
-    <div>
-
+    <div class="text-white h-2/6 py-8 px-28 overflow-y-auto max-h-full">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti quod
+        aliquam quia, vel sit nesciunt aut modi vitae itaque, ducimus illum!
+        Fugit temporibus tenetur delectus voluptatum labore dicta dolorum
+        dolorem aspernatur doloribus, quisquam perspiciatis dignissimos quaerat
+        odit, ex commodi aliquam placeat illum pariatur, eos optio eveniet?
+        Voluptatibus quia possimus voluptate neque fuga repellat assumenda,
+        rerum debitis aut autem, odit voluptatum fugiat, veritatis natus quo a!
+        Adipisci magnam recusandae cumque saepe sapiente culpa laborum rerum
+        autem consectetur corrupti id nihil aliquam ipsa fugit debitis
+        aspernatur voluptatibus quo enim consequatur iure, dolorem cum. Possimus
+        autem ea repudiandae, repellendus in esse nemo magnam?
     </div>
 </div>
