--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import DetailScreen from '../components/DetailScreen.astro'
+import Aditional from '../components/Aditional.astro';
 ---
 
 <Layout>
 	<DetailScreen />
-	
+	<Aditional />
 </Layout>
