--- a/src/components/DetailScreen.astro
+++ b/src/components/DetailScreen.astro
@@ -1,8 +1,12 @@
+---
+import fondoAriadne from "../images/fondoAriadne.jpg";
+---
+
 <div class="bg-slate-600 h-screen" slot="detailScreen">
     <div class="relative h-4/6 min-w-screen bg-black">
         <div class="text-white bottom-10 absolute ml-28">
-            <h3 class="text-lime-400 uppercase">ariadne</h3>
-            <div class="my-5">
+            <h3 class="text-lime-400 uppercase text-4xl">ariadne</h3>
+            <div class="my-5 text-xl">
                 <p>Ariadne</p>
                 <p>Dirigida por: Adrian Rodriguez</p>
                 <p>Genero(s): Drama, Romance</p>
@@ -24,21 +28,36 @@
                         ></path>
                     </svg>
                 </span>
-                <span>Ver ahora</span>
+                <p class="uppercase">Ver ahora</p>
             </button>
         </div>
     </div>
-    <div class="text-white h-2/6 py-8 px-28 overflow-y-auto max-h-full">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti quod
-        aliquam quia, vel sit nesciunt aut modi vitae itaque, ducimus illum!
-        Fugit temporibus tenetur delectus voluptatum labore dicta dolorum
-        dolorem aspernatur doloribus, quisquam perspiciatis dignissimos quaerat
-        odit, ex commodi aliquam placeat illum pariatur, eos optio eveniet?
-        Voluptatibus quia possimus voluptate neque fuga repellat assumenda,
-        rerum debitis aut autem, odit voluptatum fugiat, veritatis natus quo a!
-        Adipisci magnam recusandae cumque saepe sapiente culpa laborum rerum
-        autem consectetur corrupti id nihil aliquam ipsa fugit debitis
-        aspernatur voluptatibus quo enim consequatur iure, dolorem cum. Possimus
-        autem ea repudiandae, repellendus in esse nemo magnam?
+    <div class="text-white h-2/6 py-8 px-28 overflow-y-auto max-h-full text-justify">
+        La Larga Espera es una conmovedora historia sobre el poder de la
+        esperanza y la resiliencia humana, ambientada en un pequeño pueblo
+        costero. La película sigue a Isabel, una joven madre que, tras la
+        desaparición de su esposo, Javier, en un accidente marítimo, se enfrenta
+        a la difícil tarea de criar a su hija Valentina en un entorno lleno de
+        incertidumbre. Javier era un pescador experimentado que, en su último
+        viaje, nunca regresó a casa, dejando a su familia destrozada. A lo largo
+        de los años, Isabel mantiene la esperanza de que su esposo aún esté
+        vivo, a pesar de las pruebas y la falta de evidencia que lo sugiera. La
+        trama gira en torno a su lucha interna entre la necesidad de seguir
+        adelante por el bien de su hija y su firme creencia de que algún día
+        Javier regresará. Con el apoyo de su madre, Doña Clara, y la comunidad
+        del pueblo, Isabel intenta llevar una vida normal, aunque la sombra de
+        su esposo desaparecido siempre está presente. La película no solo
+        explora la lucha emocional de Isabel, sino también cómo las pequeñas
+        acciones cotidianas pueden tener un gran impacto en las personas que
+        amamos. Valentina, ahora adolescente, empieza a preguntarse si la vida
+        de su madre ha estado marcada por una espera interminable que ha
+        condicionado su propia vida. Con una fotografía que captura la belleza
+        del paisaje costero y una banda sonora melancólica, La Larga Espera es
+        una reflexión sobre el amor, la pérdida y el paso del tiempo, mientras
+        se muestra cómo, a veces, el simple acto de esperar puede ser una forma
+        de vivir. La película invita a los espectadores a cuestionar qué
+        significa realmente “esperar” y cómo la esperanza puede ser, a veces, el
+        motor que impulsa a las personas a seguir adelante, incluso cuando todo
+        parece perdido.
     </div>
 </div>
