--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,13 @@
 ---
 import TermsAndConditions from "../pages/TermsAndConditions.astro"
+import Contact from "../pages/Contact.astro"
+import PrivacyAdvise from "../pages/PrivacyAdvise.astro"
 ---
 
-<footer class="bg-gray-800 text-gray-300 py-4 fixed bottom-0 w-full">
+<!-- <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl fixed botomm-0"> -->
+    <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl">
     <div class="mx-auto flex">
-        <div>
+        <div class="ml-3">
             <p>&copy; 2024 Wahu ® - Algunos derechos están reservados.</p>
         </div>
         <div class="ml-3">
@@ -14,7 +17,8 @@ import TermsAndConditions from "../pages/TermsAndConditions.astro"
             <p> <a href="/terms-and-conditions">Aviso de Privacidad |</a> </p>
         </div>
         <div class="ml-1 mr-1">
-            <p> <a href="/terms-and-conditions"></a>Contáctanos |</p>
+            <p> <a href="/terms-and-conditions">Contáctanos |</a></p>
         </div>
     </div>
 </footer>
+  
