--- a/src/components/Aditional.astro
+++ b/src/components/Aditional.astro
@@ -1,6 +1,14 @@
+---
+import Carrousel from "./Carrousel.astro"
+---
+
 <div class="bg-slate-800 px-10 py-6">
     <div class="text-2xl">
-        <h1 class="text-lime-400 font-tittle text-5xl">Material</h1>
-        <h1 class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-4xl">Adicional</h1>
+      <h1 class="text-lime-400 font-tittle text-5xl">Material</h1>
+      <h1 class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-4xl">Adicional</h1>
     </div>
+
+    <Carrousel />
+
 </div>
+    
