--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@ onMount(() => {
   });
 });
 ---
-<nav class=" bg-gray-800 text-white py-8 fixed top-0 w-full">
+<nav class=" bg-gray-800 text-white py-8  z-50 fixed top-0 w-full shadow-xl">
     <div class="mx-auto flex justify-between items-center">
       <!-- Logo -->
       <div class="flex items-st">
