Actualizacion de DetailScreen, redireccion en Navbar, pantalla 404, correo desde la opcion de contactanos y redireccion en footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,31 @@
 ---
-import TermsAndConditions from "../pages/TermsAndConditions.astro"
-import Contact from "../pages/Contact.astro"
-import PrivacyAdvise from "../pages/PrivacyAdvise.astro"
+import TermsAndConditions from "../pages/TermsAndConditions.astro";
+import Contact from "../pages/Contact.astro";
+import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
 ---
 
 <!-- <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl fixed botomm-0"> -->
-    <footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl">
+<footer class="bg-gray-700 text-gray-300 py-4 bottom-0 w-full shadow-xl">
     <div class="mx-auto flex">
         <div class="ml-3">
             <p>&copy; 2024 Wahu ® - Algunos derechos están reservados.</p>
         </div>
         <div class="ml-3">
-            <p> <a href="/terms-and-conditions">| Términos y condiciones |</a> </p>
+            <p>
+                <a href="/TermsAndConditions">| Términos y condiciones |</a>
+            </p>
         </div>
         <div class="ml-1 mr-1">
-            <p> <a href="/terms-and-conditions">Aviso de Privacidad |</a> </p>
+            <p><a href="/PrivacyAdvise">Aviso de Privacidad |</a></p>
         </div>
         <div class="ml-1 mr-1">
-            <p> <a href="/terms-and-conditions">Contáctanos |</a></p>
+            <p>
+                <a
+                    href="mailto:astro@gmail.com?subject=Consulta&body=Hola, tengo una pregunta."
+                >
+                    Contáctanos |
+                </a>
+            </p>
         </div>
     </div>
 </footer>
-  
