--- a/src/components/DetailScreen.astro
+++ b/src/components/DetailScreen.astro
@@ -3,7 +3,7 @@ import fondoAriadne from "../images/fondoAriadne.jpg";
 ---
 
 <div class="bg-slate-600 h-screen" slot="detailScreen">
-    <div class="relative h-4/6 min-w-screen bg-black">
+    <div class="relative h-4/6 min-w-screen bg-[url('../src/assets/bg-ARIADNE.jpg')] opacity-95 shadow-inner shadow-slate-600">
         <div class="text-white bottom-10 absolute ml-28">
             <h3 class="text-lime-400 uppercase text-4xl">ariadne</h3>
             <div class="my-5 text-xl">
